chore: use Java 17 SDK